fix: mobileNavbar just shown on mobile widht

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -67,8 +67,13 @@ h1 {
 }
 
 
+.mobile{
+  display: none;
+  @media (max-width: 950px) {
+    display: flex;
+  }
 
-
+}
 
 
 
